# LEAP

./: COMPLIANCE_UPGRADE_SUMMARY.md  GOVERNANCE_UPGRADE_SUMMARY.md  PHASE_3_UPDATES.md  README.md  USAGE.md  app.py  deepseek_python_20260621_d72d89.py  governance_patch.py  junie_test.txt  pyproject.toml  requirements.txt  run_generation.py  setup.cfg  test_app.py
.ai/: AI_AGENT.md  ARCHITECTURE.md  BUGS.md  BUSINESS_RULES.md  CHANGELOG.md  CURRENT_STATE.md  DECISIONS.md  HANDOFF.md  LEAP_MASTER_ROADMAP.md  PROJECT_CONTEXT.md  README.md  RESEARCH_CONTEXT.md  ROADMAP.md  START_HERE.md  TEMP_PROBLEM.md  USAGE_GUIDE.md
Design Audit for LEAP Interface/: README.md  index.html  vite.config.ts
bluebook_generator/: __init__.py  __main__.py  ai_generator.py  cli.py  governance.py  governance_rules.json  kpi_extractor.py  main.py  parser.py  petrochemical_kpi_kb2.json
docs/: conf.py  cooling_water_deltat_c.rst  daily_feedstock_throughput_tonsday.rst  discovery_report.rst  governance_overrides.json  index.rst  kpi_flare_recovery_pct.rst  maintenance_to_operating_cost_ratio.rst  mean_time_between_failures_mtbf.rst  oee.rst  onspec_rate.rst  polymer_melt_flow_index_mfi_variance.rst  propylene_to_ethylene_pe_ratio.rst  raci_directory.rst  sox_emissions_concentration_kgm3.rst  specific_catalyst_cost_ton.rst  yield_percentage.rst
figuersConverting/: generate_figures.py
phase3/: INTENTIONALGOVERROR.py  OPERATOReRROR.py  SQLKPI4sq.sql  kpi_definitions.json  kpi_governance.json  kpi_logic.py  kpi_queries.sql  phase3.py  testingKPIs-logic-warning.md  wrngsql.sql
(+104 files in other folders)
